infra/k8s/overlays/dev-multinode/node-placement-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-3
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  template:
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-worker-3
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: frontend
              topologyKey: kubernetes.io/hostname
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: frontend
